认证模块功能优化
(cherry picked from commit 4dde6a1e10df2556d54a2854bc278449d470d961)